Fix end game symbol on iOS

--- a/docs/style.css
+++ b/docs/style.css
@@ -60,7 +60,7 @@ html, body {
   z-index: 3;
   font-size: 2em;
   text-align: right;
-  padding: 5px 5px 10px 20px;
+  padding: 5px 10px 10px 20px;
   border-radius: 0 0 0 20px;
   color: white;
 }
